aks/yaml/poi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  labels:
    app: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registrybkt9373.azurecr.io/poi:latest
        ports:
        - containerPort: 80
