aks/yaml/trips-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: api
  labels:
    app: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registrybkt9373.azurecr.io/trips:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 256Mi
        volumeMounts:
        - name: secrets-store
          mountPath: "/secrets"
          readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-system-msi"
