aks/yaml/tripviewer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  namespace: web
  labels:
    app: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registrybkt9373.azurecr.io/tripviewer:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 1
            memory: 256Mi
