aks/yaml/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: api
  labels:
    app: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registrybkt9373.azurecr.io/user-java:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 1
            memory: 256Mi
