aks/yaml/userprofile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api
  labels:
    app: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registrybkt9373.azurecr.io/userprofile:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 1
            memory: 256Mi
