aks/yaml/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
  labels:
    run: userprofile-service
  namespace: api
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: userprofile

---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
  labels:
    run: trips-service
  namespace: api
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: trips
