aks/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: trips-ingress
  # namespace: web
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: web-service
            servicePort: 80
          pathType: Exact
        - path: /api/user
          pathType: Prefix
          backend:
            serviceName: userprofile-service
            servicePort: 80
        - path: /api/user-java
          pathType: Prefix
          backend:
            serviceName: user-java-service
            servicePort: 80
        - path: /api/trips
          pathType: Prefix
          backend:
            serviceName: trips-service
            servicePort: 80
        - path: /api/poi
          pathType: Prefix
          backend:
            serviceName: poi-service
            servicePort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: web-service
spec:
  type: ExternalName
  externalName: tripviewer.web.svc.cluster.local

---
kind: Service
apiVersion: v1
metadata:
  name: userprofile-service
spec:
  type: ExternalName
  externalName: userprofile-service.api.svc.cluster.local

---
kind: Service
apiVersion: v1
metadata:
  name: user-java-service
spec:
  type: ExternalName
  externalName: user-java-service.api.svc.cluster.local

---
kind: Service
apiVersion: v1
metadata:
  name: trips-service
spec:
  type: ExternalName
  externalName: trips-service.api.svc.cluster.local

---
kind: Service
apiVersion: v1
metadata:
  name: poi-service
spec:
  type: ExternalName
  externalName: poi-service.api.svc.cluster.local
